Configure CORS with environment variable for Vercel deployment